[package]
name = "lenovo_legion_hid"
version = "0.1.0"
edition = "2021"
authors = ["4JX"]
homepage = "https://github.com/4JX/lenovo-legion-hid"
description = "A small libray meant to ease interfacing with the keyboard on some Lenovo Legion laptops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lenovolegionhid"
crate-type = ["dylib"]

[dependencies]
thiserror = "1.0.30"

[dependencies.hidapi]
version = "1.3.0"
default-features = false
features = ["linux-static-libusb"]
